# simdhelpers

./: .clang_complete  .gitignore  CMakeLists.txt  README.md
include/: array_utils.hpp  restrict.hpp  utils-sse.hpp  utils.cpp  utils.hpp
include/bitonic/: bitonic-sse.hpp
include/compress/: compress-sse.hpp
include/simdhelpers/: aligned_alloc.hpp  array_utils.hpp  assume.hpp  defs.hpp  simd-wrapper.hpp  term_utils.hpp  utils-sse.hpp  utils.hpp  wyhash.hpp
include/simdhelpers/bitonic/: bitonic-sse.hpp
include/simdhelpers/compress/: compress-sse.hpp  lut.hpp
include/simdhelpers/expand/: expand-sse.hpp
src/: array_utils.cpp  compress.cpp  expand.cpp  utils.cpp
tests/: CMakeLists.txt  TestSIMD-x86.cpp  TestUtils.cpp  main.cpp
